[package]
name = "axfetchum"
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/yackey-labs/axfetchum"
description = "Auto-generate typed TypeScript API clients from Axum route metadata"
keywords = ["axum", "typescript", "codegen", "api-client"]
categories = ["development-tools", "web-programming"]
publish = true

[features]
default = []
axum = ["dep:axum"]

[dependencies]
axum = { version = "0.8", optional = true }

[dev-dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
